fix otel coll config

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -98,7 +98,7 @@ spec:
                   action: drop
     processors:
       batch:
-      spanMetrics:
+      spanmetrics:
         metrics_exporter: prometheus
 
     exporters:
