--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -106,22 +106,22 @@ spec:
         # logLevel: debug
 
       prometheus:
-        endpoint: http://prometheus-operator-kube-p-prometheus.monitoring:9090
+        endpoint: prometheus-operator-kube-p-prometheus:9090
 
       jaeger:
-        endpoint: jaeger-operator-jaeger-collector.monitoring:14250
+        endpoint: jaeger-operator-jaeger-collector:14250
         tls:
           insecure: true
 
       otlphttp/tempo:
         # endpoint: http://mk.tempo.192.168.64.35.nip.io/otlp # Public URL
-        endpoint: http://tempo-tempo-distributed-distributor.monitoring:55681
+        endpoint: http://tempo-tempo-distributed-distributor:55681
         tls:
           # insecure_skip_verify: true # for HTTPS with invalid cert
           insecure: true # for http only endpoint
 
       loki:
-        endpoint: http://loki-loki-distributed-gateway.monitoring/loki/api/v1/push
+        endpoint: http://loki-loki-distributed-gateway/loki/api/v1/push
         # tenant_id: "example"
         tls:
           insecure: true
