fix prom endpoint in otel coll

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -106,7 +106,9 @@ spec:
         # logLevel: debug
 
       prometheus:
-
+        endpoint: 0.0.0.0:9090
+        resource_to_telemetry_conversion: 
+          enabled: true
       jaeger:
         endpoint: jaeger-operator-jaeger-collector:14250
         tls:
