add pod monitor for prom ote coll

--- a/env/cluster-addons/monitoring/opentelemetry/kustomization.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/kustomization.yaml
@@ -2,6 +2,7 @@ kind: Kustomization
 
 resources:
   - "./resources/opentelemetry-collector.yaml"
+  - "./resources/pod-monitor-otel-prometheus-exporter.yaml"
 
 helmCharts:
   - repo: https://open-telemetry.github.io/opentelemetry-helm-charts
