fix podmonitor yaml

--- a/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
@@ -3,7 +3,7 @@ kind: PodMonitor
 metadata:
   name: otel-promotheus-exporter
   labels:
-    name: front-end
+    name: otel-promotheus-exporter
 spec:
   selector:
     matchLabels:
