--- a/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
@@ -7,6 +7,6 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/component: opentelemetry-collector
+      "app.kubernetes.io/component": opentelemetry-collector
   podMetricsEndpoints:
-  - targetPort: 9090
+    - port: 9090
