fix svcmonitor yaml

--- a/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
@@ -8,5 +8,5 @@ spec:
   selector:
     matchNames:
       - otel-collector-daemonset-collector-monitoring
-  podMetricsEndpoints:
+  endpoints:
     - port: monitoring
