fix svc monitor

--- a/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
@@ -6,7 +6,7 @@ metadata:
     name: otel-promotheus-exporter
 spec:
   selector:
-    matchNames:
-      - otel-collector-daemonset-collector-monitoring
+    matchLabels:
+      name: otel-collector-daemonset-collector-monitoring
   endpoints:
     - port: monitoring
