include ns selecgtgor

--- a/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
@@ -5,6 +5,9 @@ metadata:
   labels:
     name: otel-promotheus-exporter
 spec:
+  namespaceSelector:
+    matchNames:
+      - monitoring
   selector:
     matchLabels:
       name: otel-collector-daemonset-collector-monitoring
