--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -19,6 +19,7 @@ spec:
         protocols:
           grpc:
           # http:
+      opencensus:
       jaeger:
         protocols:
           grpc:
