update spanmetrics coll config

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -100,7 +100,7 @@ spec:
     processors:
       batch:
       spanmetrics:
-        metrics_exporter: prometheus
+        metrics_exporter: prometheusremotewrite
 
     exporters:
       logging:
