fix jaeger config

--- a/env/cluster-addons/monitoring/jaeger/values.yaml
+++ b/env/cluster-addons/monitoring/jaeger/values.yaml
@@ -10,7 +10,7 @@ jaeger:
 
       options:
         prometheus: http://prometheus-operator-kube-p-prometheus:9090
-      metricStorage:
+      metricsStorage:
         type: prometheus
 
     storage:
