--- a/env/cluster-addons/monitoring/jaeger/values.yaml
+++ b/env/cluster-addons/monitoring/jaeger/values.yaml
@@ -9,7 +9,8 @@ jaeger:
       image: jaegertracing/all-in-one:1.33.0
 
       options:
-        prometheus: http://prometheus-operator-kube-p-prometheus:9090
+        prometheus:
+          server-url: http://prometheus-operator-kube-p-prometheus:9090
       metricsStorage:
         type: prometheus
 
