--- a/env/cluster-addons/monitoring/jaeger/values.yaml
+++ b/env/cluster-addons/monitoring/jaeger/values.yaml
@@ -1,5 +1,5 @@
-# image:
-#   tag: 1.33.0
+image:
+  tag: 1.31.0
 
 jaeger:
   create: true
@@ -9,8 +9,7 @@ jaeger:
       image: jaegertracing/all-in-one:1.33.0
 
       options:
-        prometheus:
-          server-url: http://prometheus-operator-kube-p-prometheus:9090
+        prometheus.server-url: http://prometheus-operator-kube-p-prometheus:9090
       metricsStorage:
         type: prometheus
 
