--- a/env/cluster-addons/monitoring/jaeger/values.yaml
+++ b/env/cluster-addons/monitoring/jaeger/values.yaml
@@ -4,22 +4,17 @@
 jaeger:
   create: true
   spec:
-    strategy: allInOne # production
+    # strategy: production
     allInOne:
-      image: jaegertracing/all-in-one:1.31.0
+      image: jaegertracing/all-in-one:1.33.0
       options:
-        log-level: debug
-        query:
-          base-path: /jaeger
         prometheus:
-          server-url: "http://prometheus-operator-kube-p-prometheus:9090"
+          server-url: http://prometheus-operator-kube-p-prometheus:9090
       metricsStorage:
         type: prometheus
 
     storage:
-      options:
-        memory:
-          max-traces: 100000
+      type: badger
 
     ingress:
       enabled: true
