--- a/env/cluster-addons/monitoring/jaeger/resources/jaeger-instance.yaml
+++ b/env/cluster-addons/monitoring/jaeger/resources/jaeger-instance.yaml
@@ -3,7 +3,7 @@ kind: Jaeger
 metadata:
   name: jaeger
 spec:
-  strategy: allInOne
+  strategy: allinone
   allInOne:
     image: jaegertracing/all-in-one:1.33
     options:
