fix jaeger name

--- a/env/cluster-addons/monitoring/jaeger/resources/jaeger-instance.yaml
+++ b/env/cluster-addons/monitoring/jaeger/resources/jaeger-instance.yaml
@@ -1,7 +1,7 @@
 apiVersion: jaegertracing.io/v1
 kind: Jaeger
 metadata:
-  name: jaeger
+  name: jaeger-operator-jaeger
 spec:
   strategy: allinone
   allInOne:
