use badger storage in jaeger

--- a/env/cluster-addons/monitoring/jaeger/resources/jaeger-instance.yaml
+++ b/env/cluster-addons/monitoring/jaeger/resources/jaeger-instance.yaml
@@ -12,9 +12,8 @@ spec:
     metricsStorage:
       type: prometheus
   storage:
-    options:
-      memory:
-        max-traces: 100000
+    type: badger
+    
   ingress:
     enabled: true
     hosts:
