use thrift compact jaeger protocol

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -22,7 +22,7 @@ spec:
       opencensus:
       jaeger:
         protocols:
-          grpc:
+          thrift_compact:
 
       # filelog:
       #   start_at: beginning
