add all jaeger protocols to otel conf

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -22,7 +22,10 @@ spec:
       opencensus:
       jaeger:
         protocols:
+          grpc:
+          thrift_binary:
           thrift_compact:
+          thrift_http:
 
       # filelog:
       #   start_at: beginning
