--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -86,7 +86,7 @@ spec:
             - job_name: 'otelcol'
               scrape_interval: 10s
               static_configs:
-              - targets: ['0.0.0.0:8881']
+              - targets: ['0.0.0.0:8888']
               metric_relabel_configs:
                 - source_labels: [ __name__ ]
                   regex: '.*grpc_io.*'
@@ -103,6 +103,7 @@ spec:
 
       prometheus:
         endpoint: 0.0.0.0:8882
+        send_timestamps: true
         resource_to_telemetry_conversion: 
           enabled: true
 
