--- a/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
@@ -10,6 +10,6 @@ spec:
       - monitoring
   selector:
     matchLabels:
-      name: otel-collector-daemonset-collector-monitoring
+      app.kubernetes.io/name: otel-collector-daemonset-collector-monitoring
   endpoints:
     - port: monitoring
