--- a/env/cluster-addons/monitoring/opentelemetry/values.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/values.yaml
@@ -1,7 +1,7 @@
 manager:
-  # image:
-  #   repository: 
-  #   tag: v0.47.0
+  image:
+    repository: 
+    tag: v0.48.0 # comment out to use chart appVersion
   collectorImage:
     repository: otel/opentelemetry-collector-contrib
     tag: 0.48.0
