--- a/env/cluster-addons/monitoring/opentelemetry/values.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/values.yaml
@@ -1,6 +1,6 @@
 manager:
   image:
-    repository: 
+    # repository: 
     tag: v0.48.0 # comment out to use chart appVersion
   collectorImage:
     repository: otel/opentelemetry-collector-contrib
