--- a/env/cluster-addons/linkerd-stack/linkerd/linkerd-cni.yaml
+++ b/env/cluster-addons/linkerd-stack/linkerd/linkerd-cni.yaml
@@ -1,4 +1,2 @@
-# namespace: linkerd
-# # install namespace through cni chart instead of control plane 
-# # to make cni is installed before control plane
-# installNamespace: true 
+namespace: linkerd
+installNamespace: false 
