fix otel svc monitor

--- a/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/pod-monitor-otel-prometheus-exporter.yaml
@@ -4,6 +4,7 @@ metadata:
   name: otel-promotheus-exporter
   labels:
     name: otel-promotheus-exporter
+    release: prometheus-operator
 spec:
   namespaceSelector:
     matchNames:
