add otel spanmetrices prom exporter port to svc

--- a/env/cluster-addons/monitoring/opentelemetry/resources/servicemonitor-otelcol-metrics.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/servicemonitor-otelcol-metrics.yaml
@@ -1,9 +1,9 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: otel-promotheus-exporter
+  name: otel-collector
   labels:
-    name: otel-promotheus-exporter
+    name: otel-collector
     release: prometheus-operator
 spec:
   namespaceSelector:
