--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -86,7 +86,7 @@ spec:
             - job_name: 'otelcol'
               scrape_interval: 10s
               static_configs:
-              - targets: ['0.0.0.0:8888']
+              - targets: ['0.0.0.0:8888', '0.0.0.0:8889']
               metric_relabel_configs:
                 - source_labels: [ __name__ ]
                   regex: '.*grpc_io.*'
@@ -98,11 +98,11 @@ spec:
         metrics_exporter: prometheus
 
     exporters:
-      logging:
-        # logLevel: debug
+      # logging:
+      #   # logLevel: debug
 
       prometheus:
-        endpoint: 0.0.0.0:8882
+        endpoint: 0.0.0.0:8889
         send_timestamps: true
         resource_to_telemetry_conversion: 
           enabled: true
