fix otel chart kustomize

--- a/env/cluster-addons/monitoring/opentelemetry/kustomization.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/kustomization.yaml
@@ -1,7 +1,8 @@
 kind: Kustomization
 
 resources:
-  - resources/
+  - "./resources/opentelemetry-collector.yaml"
+  - "./resources/servicemonitor-otelcol-metrics.yaml"
 
 helmCharts:
   - repo: https://open-telemetry.github.io/opentelemetry-helm-charts
