remove logging from otelcol pipeline

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -145,14 +145,14 @@ spec:
         traces:
           receivers: [otlp, jaeger]
           processors: [batch]
-          exporters: [logging, otlphttp/tempo, jaeger]
+          exporters: [otlphttp/tempo, jaeger]
 
         metrics:
           receivers: [prometheus]
           processors: [batch]
-          exporters: [logging, prometheus]
+          exporters: [prometheus]
 
         # logs:
         #   receivers: [filelog]
         #   processors: [batch]
-        #   exporters: [logging]
+        #   exporters: []
