--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -26,10 +26,6 @@ spec:
           thrift_binary:
           thrift_compact:
           thrift_http:
-      # this dummy receiver to be used with prometheus exporter in metrice pipleline
-      otlp/dummyreceiver:
-        protocols:
-          grpc: localhost:12345
 
       # filelog:
       #   start_at: beginning
@@ -83,7 +79,19 @@ spec:
       #         - remove: run_id
       #         - remove: uid
       #       type: restructure
-
+      
+      prometheus:
+        config:
+          scrape_configs:
+              # job to scrape it's own metrics from it's own container port 8888
+            - job_name: 'otelcol'
+              scrape_interval: 10s
+              static_configs:
+              - targets: ['0.0.0.0:8888']
+              metric_relabel_configs:
+                - source_labels: [ __name__ ]
+                  regex: '.*grpc_io.*'
+                  action: drop
     processors:
       batch:
       spanmetrics:
@@ -141,7 +149,7 @@ spec:
           exporters: [otlphttp/tempo, jaeger]
 
         metrics:
-          receivers: [otlp/dummyreceiver]
+          receivers: [prometheus]
           processors: [batch]
           exporters: [prometheus]
 
