try diff in podmonitor for otel

--- a/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otel-promotheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otel-promotheus-exporter.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     name: otel-promotheus-exporter
     release: prometheus-operator
+    prometheus: true
 spec:
   namespaceSelector:
     matchNames:
