rollback otel podmonitor

--- a/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otel-promotheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otel-promotheus-exporter.yaml
@@ -3,7 +3,7 @@ kind: PodMonitor
 metadata:
   name: otel-promotheus-exporter
   labels:
-    app.kubernetes.io/name: otel-collector-daemonset-collector
+    name: otel-promotheus-exporter
     release: prometheus-operator
 spec:
   namespaceSelector:
