try ports config from otel coll

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -4,7 +4,13 @@ metadata:
   name: otel-collector-daemonset
 spec:
   mode: daemonset
-
+  # podSecurityContext:
+  # podAnnotations:
+  # maxReplicas: 
+  ports:
+    - name: prometheus-exporter-listener
+      port: 8889
+      targetPort: 8889
   volumes:
     - name: varlog
       hostPath:
