--- a/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otel-promotheus-exporter.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otel-promotheus-exporter.yaml
@@ -13,4 +13,4 @@ spec:
     matchLabels:
       app.kubernetes.io/name: otel-collector-daemonset-collector
   podMetricsEndpoints:
-    - targetPort: 8889
+    - port: prometheus-exporter-listener
