try otel svcmonitor

--- a/env/cluster-addons/monitoring/opentelemetry/resources/servicemonitor-otelcol-metrics.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/servicemonitor-otelcol-metrics.yaml
@@ -11,6 +11,6 @@ spec:
       - monitoring
   selector:
     matchLabels:
-      app.kubernetes.io/name: otel-collector-daemonset-collector-monitoring
+      app.kubernetes.io/name: otel-collector-daemonset-collector
   endpoints:
-    - port: monitoring
+    - port: prometheus-exporter-listener
