try diff metric receiver

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -158,7 +158,7 @@ spec:
           exporters: [otlphttp/tempo, jaeger]
 
         metrics:
-          receivers: [prometheus]
+          receivers: [otlp]
           processors: [batch]
           exporters: [prometheus]
 
